--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": ">=7.4",
         "acquia/acquia-cms-starterkit": "^1",
+        "acquia/blt": "^13.7",
         "acquia/drupal-environment-detector": "^1",
         "acquia/memcache-settings": "^1",
         "composer/installers": "^2.1",
@@ -39,7 +40,8 @@
             "drupal/core-composer-scaffold": true,
             "ergebnis/composer-normalize": true,
             "oomphinc/composer-installers-extender": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "acquia/blt": true
         },
         "platform": {
             "php": "7.4"
