--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "require-dev": {
         "acquia/coding-standards": "^2.0.0",
         "mglaman/phpstan-drupal": "^1.1",
+        "mikemadison13/blt-lando": "dev-main",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.6",
         "phpstan/phpstan-deprecation-rules": "^1.0",
